# job-tracker

./: .env  database.sqlite  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/: README.md  jest.config.js  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts
.github/__tests__/: README.md
.github/app/: README.md
.github/components/: README.md
.github/hooks/: README.md  use-auth.tsx
.github/lib/: auth.ts
.github/workflows/: ci.yml
__tests__/integration/: companies.test.ts
__tests__/unit/: auth.test.ts  db.test.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/(authenticated)/: layout.tsx
app/api/: README.md
app/api-docs/: page.tsx  swagger.tsx
app/proto/: linkedin_search.js
app/service/: supabase.service.ts  user.service.ts  zod.schema.ts
backend/: .env  __init__.py  config.py  linkedin_auth.json  main.py  pyproject.toml
backend/models/: schema.py
backend/services/: linkedin_profile_service.py  llm_service.py  scraper.py
backend/utils/: prompts.py
components/companies/: company-grid.tsx
components/contacts/: contact-grid.tsx
frontend/: .env  .env.development  PROJECT_DOCUMENTATION.md  THEME_CUSTOMIZATION.md  jest.setup.ts  package-lock.json  tailwind.config.ts  vercel.json
hooks/: use-auth.ts  use-auth.tsx  use-companies.ts  use-jobs.ts
lib/: README.md  auth.ts  db.ts  swagger.ts
prisma/: schema.prisma
services/: company.service.ts  job.service.ts
types/: company.types.ts  jobs.type.ts  swagger-ui-react.d.ts
(+131 files in other folders)
